--- a/Views/Cars/List.cshtml
+++ b/Views/Cars/List.cshtml
@@ -1,5 +1,6 @@
-﻿@using Shop.Data.Models
-@model IEnumerable<Car>
+﻿@using Shop.ViewModels
+
+@model CarsListViewModel
 
 @{
     Layout = null;
@@ -14,12 +15,13 @@
 </head>
 <body>
     <h2>All cars</h2>
+    <h3>@Model.currCategory</h3>
     @{
-        foreach (var car in Model)
+        foreach (var car in Model.allCars)
         {
             <div>
-                <h2>Модель: @car.name</h2>
-                <p>Цена: @car.price.ToString("c")</p>
+                <h2>Model: @car.name</h2>
+                <p>Price: @car.price.ToString("c")</p>
             </div>
         }
     }
