--- a/Views/Cars/List.cshtml
+++ b/Views/Cars/List.cshtml
@@ -1,19 +1,23 @@
-﻿@using Shop.ViewModels
+﻿@*@using Shop.ViewModels
 
-@model CarsListViewModel
+@model CarsListViewModel*@
 
-@{
-    Layout = null;
+@*@{
+    Layout = "_Layout";
 }
 
-<!DOCTYPE html>
+<!DOCTYPE html>*@
 
-<html>
+@*<html>
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>List</title>
 </head>
-<body>
+<body>*@
+
+
+
+
     <h2>All cars</h2>
     <h3>@Model.currCategory</h3>
     @{
@@ -25,8 +29,12 @@
             </div>
         }
     }
-</body>
-</html>
+
+
+
+
+@*</body>
+</html>*@
 
 @*h1>Все автомобили</h1>
 <h3>@Model.currCategory</h3>
