--- a/Views/Cars/List.cshtml
+++ b/Views/Cars/List.cshtml
@@ -1,49 +1,16 @@
-﻿@*@using Shop.ViewModels
-
-@model CarsListViewModel*@
-
-@*@{
-    Layout = "_Layout";
-}
-
-<!DOCTYPE html>*@
-
-@*<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>List</title>
-</head>
-<body>*@
-
-
-
-
-    <h2>All cars</h2>
-    <h3>@Model.currCategory</h3>
+﻿<h1>All Cars</h1>
+<h3>@Model.currCategory</h3>
+<div class="row mt-5 mb-2">
     @{
         foreach (var car in Model.allCars)
         {
-            <div>
-                <h2>Model: @car.name</h2>
-                <p>Price: @car.price.ToString("c")</p>
+            <div class="col-lg-4">
+                <img class="img-thumbnail" src="@car.img" alt="@car.name" />
+                <h2>@car.name</h2>
+                <p>@car.shortDesc</p>
+                <p>Цена: @car.price.ToString("c")</p>
+                <p><a class="btn btn-warning" href="#">Подробнее</a></p>
             </div>
         }
     }
-
-
-
-
-@*</body>
-</html>*@
-
-@*h1>Все автомобили</h1>
-<h3>@Model.currCategory</h3>
-@{
-    foreach (var car in Model.allCars)
-    {
-        <div>
-            <h2>Модель: @car.name</h2>
-            <p>Цена: @car.price.ToString("c")</p>
-        </div>
-    }
-}*@
+</div>
