--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
             </div>
         </nav>
     </header>
-    <div>
+    <div class="container mt-5">
         @RenderBody()
     </div>
     <footer class="container">
