--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width" />
         <title>@ViewBag.Title</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-        <link href="~/css/style.css" />
+        <link href="~/wwwroot/css/style.css" />
     </head>
     <header>
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
