--- a/Views/Cars/List.cshtml
+++ b/Views/Cars/List.cshtml
@@ -1,16 +1,12 @@
 ﻿<h1>All Cars</h1>
 <h3>@Model.currCategory</h3>
+
 <div class="row mt-5 mb-2">
     @{
-        foreach (var car in Model.allCars)
+        foreach (Car car in Model.allCars)
         {
-            <div class="col-lg-4">
-                <img class="img-thumbnail" src="@car.img" alt="@car.name" />
-                <h2>@car.name</h2>
-                <p>@car.shortDesc</p>
-                <p>Цена: @car.price.ToString("c")</p>
-                <p><a class="btn btn-warning" href="#">Подробнее</a></p>
-            </div>
+
+            @Html.Partial("AllCars", car)
         }
     }
 </div>
