--- a/Views/Shared/AllCars.cshtml
+++ b/Views/Shared/AllCars.cshtml
@@ -1,5 +1,4 @@
-﻿@model Shop.Data.Models.Car;
-
+﻿@model Car
 
 <div class="col-lg-4">
     <img class="img-thumbnail" src="@Model.img" alt="@Model.name" />
