--- a/Views/ShopCart/Index.cshtml
+++ b/Views/ShopCart/Index.cshtml
@@ -8,5 +8,5 @@
         </div>
     }
     <hr />
-    <div class="btn btn-danger mb-5" asp-controller="Order">Pay</div>
+    <div class="btn btn-danger mb-5" asp-controller="Order">Оплатить</div>
 </div>
