--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model HomeViewModel
 
 
-<h1>Лучшие автомобили</h1>
+<h1>Best cars</h1>
 <div class="row mt-5 mb-2">
     @{
         foreach (Car car in Model.favCars) {
