--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -21,7 +21,13 @@
                             <a class="nav-link active" aria-current="page" href="/">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
+                            <a class="nav-link" href="/Cars/List">All Cars</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/Cars/List/electric">All electro</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/Cars/List/fuel">All fuel</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link disabled" href="/ShopCart/" tabindex="-1" aria-disabled="true">Shoping Cart</a>
