shop cart is working

--- a/Views/ShopCart/Index.cshtml
+++ b/Views/ShopCart/Index.cshtml
@@ -3,10 +3,10 @@
     @foreach (var el in Model.shopCart.listShopItems)
     {
         <div class="alert alert-warning mt-3">
-            <b>Автомобиль:</b> @el.car.name<br />
-            <b>Цена:</b> @el.car.price.ToString("c")
+            <b>CAR:</b> @el.car.name<br />
+            <b>Price:</b> @el.car.price.ToString("c")
         </div>
     }
     <hr />
-    <a class="btn btn-danger mb-5" asp-controller="Order" asp-action="Checkout">Оплатить</a>
+    <a class="btn btn-danger mb-5" asp-controller="Order" asp-action="checkout">Pay</a>
 </div>
