--- a/Views/ShopCart/Index.cshtml
+++ b/Views/ShopCart/Index.cshtml
@@ -8,5 +8,5 @@
         </div>
     }
     <hr />
-    <a class="btn btn-danger mb-5" asp-controller="Order" asp-action="checkout">Pay</a>
+    <a class="btn btn-danger mb-5" asp-controller="Order" asp-action="Checkout">Pay</a>
 </div>
