--- a/Views/Shared/AllCars.cshtml
+++ b/Views/Shared/AllCars.cshtml
@@ -4,6 +4,6 @@
     <img class="img-thumbnail" src="@Model.img" alt="@Model.name" />
     <h2>@Model.name</h2>
     <p>@Model.shortDesc</p>
-    <p>Цена: @Model.price.ToString("c")</p>
+    <p>Price: @Model.price.ToString("c")</p>
     <p><a class="btn btn-warning" asp-controller="ShopCart" asp-action="addToCart" asp-route-id="@Model.id">Add to Cart</a></p>
 </div>
