--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -11,12 +11,12 @@
     <header>
         <nav class="navbar navbar-expand-md navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Pakhotina Olga</a>
+                <a class="navbar-brand">Pakhotina Olga</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <ul class="navbar-nav me-auto mb-2 mb-md-0 mr-auto text-center">
+                <div class="collapse navbar-collapse navbar-right" id="navbarCollapse">
+                    <ul class="nav navbar-nav navbar-right me-auto mb-2 mb-md-0 mr-auto text-center">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="/">Home</a>
                         </li>
@@ -29,14 +29,11 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/Cars/List/fuel">All fuel</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled" href="/ShopCart/" tabindex="-1" aria-disabled="true">Shoping Cart</a>
+                        <li class="nav-item margin-right">
+                            <a class="nav-link margin-right" href="/ShopCart" tabindex="-1" aria-disabled="true">Shoping Cart</a>
                         </li>
                     </ul>
-                    <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
+
                 </div>
             </div>
         </nav>
@@ -45,7 +42,7 @@
         @RenderBody()
     </div>
     <footer class="container">
-        <p class="float-end"><a href="#">Back to top</a></p>
+        <a class="active float-en" aria-current="page" href="/">Back to Home Page</a>
         <p class="text-center">© 2021 Pakhotina Company, Inc. · <a href="#">Privacy</a></p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"></script>
